// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<GameCell> snapshots > matches cell with no tile 1`] = `
<div
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
</div>
`;

exports[`<GameCell> snapshots > matches cell with tile 1`] = `
<div
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
  <div
    class="player1 hex tile queen"
    draggable="false"
    title="Player-1 queen"
  >
    <svg
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        href="#hex"
      />
      <use
        href="#queen"
      />
    </svg>
  </div>
</div>
`;
